--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "expo-server-sdk": "^4.0.0",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
