--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
+    "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
+    "stripe": "^20.1.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
