--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "bootstrap": "tsx src/scripts/bootstrap.ts",
+    "seed:admin": "tsx prisma/create-super-admin.ts",
     "test": "jest"
   },
   "dependencies": {
